--- a/CHANGES
+++ b/CHANGES
@@ -25,3 +25,7 @@ Changes since Asterisk 1.4-beta was branched:
      CallerIDNum is used for number and CallerIDName for name.
   * setinterfacevar option in queues.conf also now sets a variable
      called MEMBERNAME which contains the member's name.
+  * Added Masquerade manager event for when a masquerade happens between
+     two channels.
+  * Added 'Strat' field to manager event QueueParams which represents
+     the queue strategy in use. 
